discussion/jgit/163403/163403_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Fix ProtectedMembersInFinalClass warning flagged by error prone

Running recent error prone version complaining on that code:

CharacterHead.java:22: error: [ProtectedMembersInFinalClass] Make
members of final classes package-private: <init>
	protected CharacterHead(char expectedCharacter) {
	          ^
    (see https://errorprone.info/bugpattern/ProtectedMembersInFinalClass)
  Did you mean 'CharacterHead(char expectedCharacter) {'

Bug: 562756
Change-Id: Ic46a0b07e46235592f6e63db631f583303420b73
Signed-off-by: David Ostrovsky <david@ostrovsky.org>

======================================================================================================================
COMMENTS
======================================================================================================================
Author: David Ostrovsky
Date: 2020-05-22 06:08:30.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-05-22 06:08:43.000000000
Message: 
Patch Set 2:

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3167/
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-05-22 06:49:37.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3167/ : FAILURE
----------------------------------------------------------------------------------------------------------------------
